--- a/brux/styles.css
+++ b/brux/styles.css
@@ -1,14 +1,10 @@
-* {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-}
-
 body {
-      font-family: 'Rubik', sans-serif;
+      font-family: "Rubik", Arial;
       font-size: 18px;
       font-weight: 300;
       line-height: 1.5;
+
+      background-color: #ffffff;
       color: #052837;
 }
 
@@ -16,14 +12,24 @@ header {
       position: fixed;
       top: 0;
       left: 0;
-      background-color: #c7f2f1;
       width: 100%;
       z-index: 1;
+
       display: flex;
+      flex-direction: row;
       justify-content: space-between;
       align-items: center;
+
       padding: 0 48px 0 48px;
+      height: 64px;
+
+      background-color: #c7f2f1;
+
+
 }
+
+
+
 
 header h1,
 header nav {
@@ -34,8 +40,87 @@ header nav {
       text-align: right;
 }
 
+header a {
+      margin: 0 0 0 16px;
+}
+
+
 h1 {
       font-size: 24px;
-      font-style: italic;
       font-weight: 900;
+      font-style: italic;
+}
+
+h2 {
+      font-size: 48px;
+      font-weight: 500;
+      line-height: 1.25;
+}
+
+h3 {
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 1.25;
+}
+
+a {
+      color: #052837;
+      text-decoration: none;
+}
+
+a.button {
+      display: inline-block;
+      background-color: #052837;
+      color: #ffffff;
+      border-radius: 50px;
+      padding: 0.5em 1.5em 0.5em 1.5em;
+}
+
+p {
+      margin: 1.5em 0 1.5em 0;
+}
+
+section.hero {
+      margin: 64px 0 0 0;
+      padding: 160px 48px 160px 48px;
+      background-color: #c7f2f1;
+      background-image: url(assets/hero.jpg);
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: 100% 50%;
+}
+
+section.hero h2,
+section.hero p {
+      max-width: 450px;
+}
+
+section.content {
+      margin: 48px;
+      display: flex;
+      flex-direction: row;
+}
+
+.image {
+
+      height: 50%;
+      width: 50%;
+}
+
+.image img {
+      height: 100%;
+      width: 100%;
+}
+
+section.content div.content {
+      flex: 0 0 400px;
+      margin: 0 0 0 48px;
+}
+
+section.content:nth-child(odd) {
+      flex-direction: row-reverse;
+}
+
+section.content:nth-child(odd) div.content {
+      margin: 0 48px 0 0;
 }
