--- a/brux/styles.css
+++ b/brux/styles.css
@@ -4,6 +4,18 @@
       box-sizing: border-box;
 }
 
+@keyframes fadeIn {
+      0% {
+            opacity: 0;
+            transform: translateY(10%)
+      }
+
+      100% {
+            opacity: 1;
+            transform: translateY(0)
+      }
+}
+
 body {
       font-family: "Rubik", Arial;
       font-size: 18px;
@@ -97,6 +109,7 @@ section.hero {
       background-size: contain;
       background-repeat: no-repeat;
       background-position: 100% 50%;
+      height: calc(100vh - 64px);
 }
 
 section.hero h2,
